--- a/FoodPiper/CreateDeals.storyboard
+++ b/FoodPiper/CreateDeals.storyboard
@@ -370,7 +370,7 @@
                                     <constraint firstAttribute="width" constant="304" id="Nds-MI-EZl"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
